manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "kubernetescluster-d45b"
    labels:
        app: "kubernetescluster-d45b"
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "kubernetescluster-d45b"
